CrOs display: reenable loading ICC file if present

crrev.com/c/728325 disabled fetching/using an ICC file for display color
correction if enough information was available in the monitor EDID. This
was based on the wrong assumption that either one or the other would be
present, but not both.  This CL reenables the use of (download of) the ICC
file for monitor colorimetry, using the EDID provided info as a fallback.

On the implementation:
DisplayConfigurator::NotifyDisplayStateObservers() pings DisplayColorManager
when there's new Display info. The later calls ApplyDisplayColorCalibration()
directly or after fetching the ICC file. In either case, if all steps
succeed, SetColorCorrection() is called; at this step we are sure that the
found/downloaded ICC file is good, and we can remove the usage of the EDID
provided ColorSpace.

Bug: 828102
Change-Id: Id799f8412ea06d781712884b1d02694f124860c6
Reviewed-on: https://chromium-review.googlesource.com/990494
Reviewed-by: Greg Levin <glevin@chromium.org>
Reviewed-by: Ahmed Fakhry <afakhry@chromium.org>
Commit-Queue: Miguel Casas <mcasas@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548238}
Former-commit-id: 0cffe98abea3b4f08c3349af686ed146932cd4c4